unpackaged/main/default/objects/Passenger__c/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Flight #</label>
    <length>200</length>
    <type>Text</type>
</CustomField>