unpackaged/main/default/objects/Passenger__c/fields/Frequent_Flyer__c.field-meta.xml
<CustomField>
    <fullName>Frequent_Flyer__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Frequent Flyer #</label>
    <length>200</length>
    <type>Text</type>
</CustomField>