unpackaged/main/default/objects/Passenger__c/fields/Global_Entry_TSA__c.field-meta.xml
<CustomField>
    <fullName>Global_Entry_TSA__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Global Entry/TSA</label>
    <length>200</length>
    <type>Text</type>
</CustomField>