unpackaged/main/default/objects/Passenger__c/fields/Logbook__c.field-meta.xml
<CustomField>
    <fullName>Logbook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logbook</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Passengers</relationshipLabel>
    <relationshipName>Passengers1</relationshipName>
    <type>Lookup</type>
</CustomField>