unpackaged/main/default/objects/Passenger__c/fields/Seat_Number__c.field-meta.xml
<CustomField>
    <fullName>Seat_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seat Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>