unpackaged/main/default/objects/Passenger__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Ticket Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>