unpackaged/main/default/objects/Passenger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Ticket_Number__c</columns>
    <columns>Seat_Number__c</columns>
    <columns>Logbook__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>